devj-playground/envs/u165622/current/proxy/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: exclude-nginx
spec:
  selector:
    matchLabels:
      app: nginx
  mtls:
    mode: PERMISSIVE
