devj-playground/envs/u165622/current/proxy/authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-pol-proxy
spec:
  selector:
    matchLabels:
      app: nginx
  action: ALLOW
  rules:
    - from:
      - source:
          principals: ["*"]
